[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest_screenshots"
version = "0.0.0"
description = "Demo project for demonstrating how to take screenshots with PyTest and Allure Report."
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
    "--alluredir", "allure-results",
    "--clean-alluredir",
    "--screenshot", "only-on-failure"
]